--- a/Hello_World.html
+++ b/Hello_World.html
@@ -5,6 +5,6 @@
       </head>
         <body>
      <h1>WELCOME</h1>
-     <p>Hello World<p>
+     <p>"I just want to keep working hard, stay humble, and keep trying to win games."<p>
         </body>
      </html>
