--- a/Hello_World.html
+++ b/Hello_World.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE.html>
 <html>
   <head>
-    <title<My FirstWebsite!</title
+ <title<My FirstWebsite!</title
       </head>
         <body>
-     <h1>WELCOME</h1>
-     <p>"I just want to keep working hard, stay humble, and keep trying to win games."<p>
+  <h1>WELCOME</h1>
+  <p>"I just want to keep working hard, stay humble, and keep trying to win games."<p>
         </body>
-     </html>
+  </html>
