Updatetourist_attractions.html

--- a/tourist_attractions.html
+++ b/tourist_attractions.html
@@ -2,4 +2,16 @@
   <html>
   <!-- Baltej Narwal -->
     <head>
-    <title></title>
+    <title>Hawaii Tourist Attractions</title>
+    </head>
+      <body>
+    <div>
+      <p>honolulu</p>
+        <br />
+      <p>Tourist Attractions</p>
+      <hr></hr> <!-- ask teacher for help on this, Skipping this step -->
+      <p>Downtown</p>
+        <br />
+      <p>Waikiki Beach</p>
+        <br />
+      <p> 
