--- a/tourist_attractions.html
+++ b/tourist_attractions.html
@@ -3,15 +3,20 @@
   <!-- Baltej Narwal -->
     <head>
     <title>Hawaii Tourist Attractions</title>
+    <style>
+    h1{ font-family:Courier}
+    
+    </style>
     </head>
       <body>
-    <div>
-      <p>honolulu</p>
-        <br />
-      <p>Tourist Attractions</p>
-      <hr></hr> <!-- ask teacher for help on this, Skipping this step -->
-      <p>Downtown</p>
-        <br />
-      <p>Waikiki Beach</p>
-        <br />
-      <p> 
+       <h1>Honolulu</h1>
+       <h2>Tourist Attractions</h2>
+       <hr>
+      <ul>
+      <font size=14><li>Downtownn</li>
+        <br>
+        <li>Waikiki Beach</li>
+        <br>
+        
+      </ul>
+       <!-- basically the line at the bottom -->
