--- a/sports_report.html
+++ b/sports_report.html
@@ -1,2 +1,30 @@
 <!DOCTYPE>
 <html>
+  <head>
+    <style>
+    <!-- This is the backgroud color, font, and text color -->
+    h1 {font-family:Helvetica;}  
+    body {background-color:DodgerBlue;
+    color:white;
+    } 
+   </style>
+ </head>
+ <body>
+   <font size="12">
+   <h1 align="center">Sport Stories</h1>
+   <hr>
+   </font>
+   <font size="10">
+   <h2>Kobe's Oscar</h2>
+   </font>
+   <p>Joining Frances McDormand, Jordan Peele and Gary Oldman in accepting Academy Awards on Sunday night was someone more readily associated with other kinds of honors: Kobe Bryant.
+
+Bryant, who retired from the N.B.A. in 2016, was involved in turning a poem he wrote into a film, “Dear Basketball,” that won the prize for best animated short.
+
+The film depicts Bryant as a child dreaming of basketball glory and as an N.B.A. star. Bryant said the film was “about the emotional journey of having a dream, believing it’ll come true; it comes true, then the realization that you have to wake up from that dream and move on to another.”
+
+Bryant surrounded himself with first-rate teammates in creating the film, including John Williams, the five-time Oscar winning composer, and Glen Keane, a former Disney animator.</p>
+   <img src="https://cdn-03.independent.ie/entertainment/movies/article36669632.ece/fe23c/AUTOCROP/w620/ipanews_3623f3c4-6551-4c32-b4c8-74667bd1ba07_1">
+    <br />
+    <h1> </h1>
+ </body>
