--- a/sports_report.html
+++ b/sports_report.html
@@ -7,6 +7,9 @@
     body {background-color:DodgerBlue;
     color:white;
     } 
+    h2 {
+      font-size:72px;
+    }
    </style>
  </head>
  <body>
@@ -14,9 +17,7 @@
    <h1 align="center">Sport Stories</h1>
    <hr>
    </font>
-   <font size="10">
    <h2>Kobe's Oscar</h2>
-   </font>
    <p>Joining Frances McDormand, Jordan Peele and Gary Oldman in accepting Academy Awards on Sunday night was someone more readily associated with other kinds of honors: Kobe Bryant.
 
 Bryant, who retired from the N.B.A. in 2016, was involved in turning a poem he wrote into a film, “Dear Basketball,” that won the prize for best animated short.
@@ -26,5 +27,12 @@ The film depicts Bryant as a child dreaming of basketball glory and as an N.B.A.
 Bryant surrounded himself with first-rate teammates in creating the film, including John Williams, the five-time Oscar winning composer, and Glen Keane, a former Disney animator.</p>
    <img src="https://cdn-03.independent.ie/entertainment/movies/article36669632.ece/fe23c/AUTOCROP/w620/ipanews_3623f3c4-6551-4c32-b4c8-74667bd1ba07_1">
     <br />
-    <h1> </h1>
+    <h2>Miralem Pjanic is the next Pirlo</h2>
+    <p>“Mire’s ability is to hit them in different ways, with curve, with power and effect,” Juninho told La Gazzetta dello Sport last year. “The trajectories are unpredictable, when the ball comes off his foot it often changes direction and that makes it difficult for the goalkeeper. Given how young he is, he’s already among the best in that speciality.” High praise indeed, but according to Opta, no player – including Pirlo – has scored more free kicks (14) in Serie A than Pjanić in the last ten years, a remarkable feat given he didn’t arrive in Italy until August 2011.
+
+Fans of the Old Lady have certainly noted his impact, seemingly dubbing him with a nickname that follows in the footsteps of the “Mozart” or “Maestro” monikers once bestowed upon Pirlo. Labelled "The Pianist” by Juventus supporters on the Curva Sud, they will hope Tottenham are dancing to Miralem Pjanić’s tune over the course of Wednesday evening’s second leg.</p>
+    <img src="https://images.beinsports.com/t1kzTLsB4nwyxqipeGKrsxaMDjs=/full-fit-in/1000x0/miralem-pjanic-cropped_1dv08jpxi2pt21dg6pkx9d1icx.jpg"width="550" height="400">
+    <br />
+    <h2>A One Handed Man Trying to Make the NFL</h2>
+    <p>Shaquem Griffin is a man that has one hand and is going to make the NFL. This man has proved evryone wrong in his life by going to the NFL combine and surpassing everyone's expectations. When he was little he was held out for a football game because he was told "Football is a game for people that has two hands, he was 8 years old at this time, and this was also the moment where he wanted to prove everyone wrong.At the Combine he did 20 reps of 225lb with one arm and is the fastest line backer since 2003, thats when the NFL started recording the stats. If he makes the NFL, he truely will change everything and will be a legend</p>
  </body>
