--- a/sports_report.html
+++ b/sports_report.html
@@ -14,7 +14,7 @@
  </head>
  <body>
    <font size="12">
-   <h1 align="center">Sport Stories</h1>
+   <h1 align="center">Sport Reports</h1>
    <hr>
    </font>
    <h2>Kobe's Oscar</h2>
@@ -35,4 +35,6 @@ Fans of the Old Lady have certainly noted his impact, seemingly dubbing him with
     <br />
     <h2>A One Handed Man Trying to Make the NFL</h2>
     <p>Shaquem Griffin is a man that has one hand and is going to make the NFL. This man has proved evryone wrong in his life by going to the NFL combine and surpassing everyone's expectations. When he was little he was held out for a football game because he was told "Football is a game for people that has two hands, he was 8 years old at this time, and this was also the moment where he wanted to prove everyone wrong.At the Combine he did 20 reps of 225lb with one arm and is the fastest line backer since 2003, thats when the NFL started recording the stats. If he makes the NFL, he truely will change everything and will be a legend</p>
+    <img src="https://i.ytimg.com/vi/rodAJax2Zt0/maxresdefault.jpg"width="550 height="400>
  </body>
+ </html>
