--- a/Contact Information.html
+++ b/Contact Information.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE>
+<html>
+  <head>
+    <title>Contact Information</title>
+  </head>
+  <body>
+    <ul>
+      <li>toora99@gmail.com</li>
+      <li>City: Los Angles,CA</li>
+      <li>13056 Toora st</li>
+      <li>Phone Number: 1-866-247-4999</li>
+      </ul>
