--- a/Contact Information.html
+++ b/Contact Information.html
@@ -1,12 +1,25 @@
 <!DOCTYPE>
 <html>
   <head>
+    <style>
+    h2 {
+      font-size:55px;
+    }
+    li {
+      font-size:30px;
+    }
     <title>Contact Information</title>
+    
+    </style>
   </head>
   <body>
+    <h2>Contact Information</h2>
+    <hr>
     <ul>
       <li>toora99@gmail.com</li>
       <li>City: Los Angles,CA</li>
       <li>13056 Toora st</li>
       <li>Phone Number: 1-866-247-4999</li>
       </ul>
+  </body>
+</html>
