--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -22,6 +22,6 @@
     <h1 align= "Center">Baltej's Portfolio</h1>
       <hr>
     <h2>Contact Information</h2>
-    <a href=
+    <a href=https://github.com/BaltejNarwal1/BaltejNarwal1.github.io/edit/master/Contact%20Information.html><alt="Contact Information
   </body>
 </html>
