--- a/Contact Information.html
+++ b/Contact Information.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+      body {
+        background-color:white;
+        color:black;
+      }
     h2 {
       font-size:55px;
     }
