--- a/Contact Information.html
+++ b/Contact Information.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-color:white;
+        background-color:blue;
         color:black;
       }
     h2 {
