--- a/Contact Information.html
+++ b/Contact Information.html
@@ -21,8 +21,8 @@
     <hr>
     <ul>
       <li>toora99@gmail.com</li>
-      <li>City: Los Angles,CA</li>
-      <li>13056 Toora st</li>
+      <li>City: Los Angeles, CA</li>
+      <li>13056 Toora St</li>
       <li>Phone Number: 1-866-247-4999</li>
       </ul>
   </body>
