--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
       <style>
@@ -13,7 +13,7 @@
         font-size:72px;>
         }
         h2 {
-        font-size:50px;>
+        font-size:40px;>
         }
       </style>
       <title>Baltej's Electronic Portfolio</title>
@@ -21,7 +21,7 @@
   <body>
     <h1 align= "Center">Baltej's Portfolio</h1>
       <hr>
-    <h2>Contact Information</h2>
-    <a href=https://github.com/BaltejNarwal1/BaltejNarwal1.github.io/edit/master/Contact%20Information.html><alt="Contact Information
-  </body>
+    <a href="https://baltejnarwal1.github.io/Contact%20Information.html"
+">Contact Information</a>
+</body>
 </html>
