--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -15,6 +15,10 @@
         h2 {
         font-size:40px;>
         }
+        h1 {
+          background-color:blue;
+          color:white;
+        }
       </style>
       <title>Baltej's Electronic Portfolio</title>
   </head>
@@ -24,4 +28,4 @@
     <a href="https://baltejnarwal1.github.io/Contact%20Information.html"
 ">Contact Information</a>
 </body>
- </html>
+</html>
