--- a/Academic_portfolio.html
+++ b/Academic_portfolio.html
@@ -7,7 +7,6 @@
         background-color: white;
         color: black;
       }
-
       h1 {
         Color: black;
         font-size: 55px;
@@ -15,12 +14,9 @@
       li {
         font-size:30px;
       }
-
       <title>Academic History </title>
-
     </style>
   </head>
-
   <body>
     <h1>Academic History</h1>
     <hr>
@@ -30,8 +26,7 @@
      <li>Currently in Grade 11</li>
      <li>Recieved a $800 scholarship</li>
      <li>Honor Role</li>
-     <li></li>
+     <li>Guaranteed Scholarships</li>
      </ul>
   </body>
-
 </html>
