--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -20,7 +20,7 @@
           color:white;
         }
       </style>
-      <title>Baltej's Electronic Portfolio</title>
+      <title>Toora's Electronic Portfolio</title>
   </head>
   <body>
     <h1 align= "Center">Baltej's Portfolio</h1>
