--- a/Academic_portfolio.html
+++ b/Academic_portfolio.html
@@ -24,9 +24,7 @@
     <ul>
      <li>Completed Elementary School</li>
      <li>Currently in Grade 11</li>
-     <li>Recieved a $800 scholarship</li>
-     <li>Honor Role</li>
-     <li>Guaranteed Scholarships</li>
+     <li>Expected to go to Harvard University in the fall of 2019</li>
      </ul>
   </body>
 </html>
