--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-      <style>
-       body {
-        background-color:white;
+    <style>
+      body {
+        background-color: white;
         color: black;
-        }
+      }
+
         {
-          Font-family:""
-        }
-        h1 { 
-        font-size:72px;>
-        }
-        h2 {
-        font-size:40px;>
-        }
-        h1 {
-          background-color:blue;
-          color:white;
-        }
-      </style>
-      <title>Toora's Electronic Portfolio</title>
+        Font-family: ""
+      }
+
+      h1 {
+        font-size: 72px;
+        >
+      }
+
+      h2 {
+        font-size: 40px;
+        >
+      }
+
+      h1 {
+        background-color: blue;
+        color: white;
+      }
+
+    </style>
+    <title>Baltej's Electronic Portfolio</title>
   </head>
+
   <body>
-    <h1 align= "Center">Toora's Portfolio</h1>
-      <hr>
-    <a href="https://baltejnarwal1.github.io/Contact%20Information.html"
-">Contact Information</a>
-</body>
+    <h1 align="Center">Baltej's Portfolio</h1>
+    <hr>
+    <a href="https://baltejnarwal1.github.io/Contact%20Information.html" ">Contact Information</a>
+      <br />
+      <a href="https://baltejnarwal1.github.io/Academic_portfolio.html " ">Academic History</a>
+  </body>
+
 </html>
+
