--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -28,11 +28,11 @@
       }
 
     </style>
-    <title>Baltej's Electronic Portfolio</title>
+    <title>Toora's Electronic Portfolio</title>
   </head>
 
   <body>
-    <h1 align="Center">Baltej's Portfolio</h1>
+    <h1 align="Center">Toora's Portfolio</h1>
     <hr>
     <a href="https://baltejnarwal1.github.io/Contact%20Information.html" ">Contact Information</a>
       <br />
