Update Work and Volunteer Experience.html

--- a/Work and Volunteer Experience.html
+++ b/Work and Volunteer Experience.html
@@ -1,1 +1,17 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <style>
+    body {
+      background-color:white;
+      color:black;
+    }
+    h1 {
+      font-size:55px;
+    }
+    h2 {
+      
+    }
+    </style>
+  </head>
+</html>
