--- a/Academic_portfolio.html
+++ b/Academic_portfolio.html
@@ -24,6 +24,7 @@
     <ul>
      <li>Completed Elementary School</li>
      <li>Currently in Grade 11</li>
+      <li>Currently in Torra Man's Secondary</li>
      <li>Expected to go to Harvard University in the fall of 2019</li>
      </ul>
   </body>
