Update Work and Volunteer Experience.html

--- a/Work and Volunteer Experience.html
+++ b/Work and Volunteer Experience.html
@@ -9,9 +9,18 @@
     h1 {
       font-size:55px;
     }
-    h2 {
-      
+    li {
+      font-size:30px;
     }
     </style>
   </head>
+  <body>
+    <h1>Work and Volunteer Experiences</h1>
+    <hr>
+    <ul>
+    <li>Have over 200 hours in volunteering</li>
+    <li>Currently a intern for software engineering</li>
+    <li>Also work a part time entrepreneur</li>
+    </ul>
+  </body>
 </html>
