--- a/Work and Volunteer Experience.html
+++ b/Work and Volunteer Experience.html
@@ -3,8 +3,8 @@
   <head>
     <style>
     body {
-      background-color:white;
-      color:black;
+      background-color:grey;
+      color:white;
     }
     h1 {
       font-size:55px;
