--- a/Academic_portfolio.html
+++ b/Academic_portfolio.html
@@ -4,8 +4,8 @@
   <head>
     <style>
       body {
-        background-color: white;
-        color: black;
+        background-color: grey;
+        color: white;
       }
       h1 {
         Color: black;
