--- a/Contact Information.html
+++ b/Contact Information.html
@@ -3,8 +3,8 @@
   <head>
     <style>
       body {
-        background-color:white;
-        color:black;
+        background-color:grey;
+        color:white;
       }
     h2 {
       font-size:55px;
