--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -37,7 +37,8 @@
     <a href="https://baltejnarwal1.github.io/Contact%20Information.html" ">Contact Information</a>
       <br />
       <a href="https://baltejnarwal1.github.io/Academic_portfolio.html " ">Academic History</a>
+    <br />
+    <a href="https://baltejnarwal1.github.io/Work%20and%20Volunteer%20Experience.html">Work and Volunteer Experience</a>
   </body>
 
 </html>
-
