--- a/Academic_portfolio.html
+++ b/Academic_portfolio.html
@@ -8,7 +8,7 @@
         color: white;
       }
       h1 {
-        Color: black;
+        Color: white;
         font-size: 55px;
       }
       li {
