Update Work and Volunteer Experience.html

--- a/Work and Volunteer Experience.html
+++ b/Work and Volunteer Experience.html
@@ -20,7 +20,7 @@
     <ul>
     <li>Have over 200 hours in volunteering</li>
     <li>Currently a intern for software engineering</li>
-    <li>Also work a part time entrepreneur</li>
+    <li>Also work as a part time entrepreneur</li>
     </ul>
   </body>
 </html>
