--- a/Accomplishments.html
+++ b/Accomplishments.html
@@ -1,2 +1,30 @@
 <!DOCTYPE html>
 <html>
+
+  <head>
+    <style>
+      body {
+        background-color:grey;
+        color:white;
+      }
+      h1 {
+        font-size:55px;
+      }
+      li {
+        font-size:30px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Accomplishments</h1>
+    <hr>
+    <br />
+    <ul>
+      <li>Recieving over four scholarships</li>
+      <li>The best student in my class</li>
+      <li>Recieved every sports award possible in high school</li>
+      <li>Have over 30 gold medals from my sports life</li>
+    </ul>
+    <img src="https://d30o31ylp1hvg6.cloudfront.net/uploads/blog/what-should-you-do-when-you-dont-accomplish-your-goals/_thumb/848x450/what-should-you-do-when-you-dont-accomplish-your-goals.png">
+  </body>
+  </html>
