--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -5,7 +5,7 @@
     <style>
       body {
         background-color: white;
-        color:  black;
+        color: black;
       }
 
         {
@@ -23,7 +23,7 @@
       }
 
       h1 {
-        background-color:  blue;
+        background-color: blue;
         color: white;
       }
 
@@ -39,6 +39,8 @@
       <a href="https://baltejnarwal1.github.io/Academic_portfolio.html " ">Academic History</a>
     <br />
     <a href="https://baltejnarwal1.github.io/Work%20and%20Volunteer%20Experience.html">Work and Volunteer Experience</a>
+    <br />
+    <a href="https://baltejnarwal1.github.io/Academic_portfolio.html">accomplishments</a>
   </body>
 
 </html>
