--- a/Accomplishments.html
+++ b/Accomplishments.html
@@ -4,27 +4,43 @@
   <head>
     <style>
       body {
-        background-color:grey;
-        color:white;
+        background-color: white;
+        color: black;
       }
+
+        {
+        Font-family: ""
+      }
+
       h1 {
-        font-size:55px;
+        font-size: 72px;
+        >
       }
-      li {
-        font-size:30px;
+
+      h2 {
+        font-size: 40px;
+        >
       }
+
+      h1 {
+        background-color: blue;
+        color: white;
+      }
+
     </style>
+    <title>Toora's Electronic Portfolio</title>
   </head>
+
   <body>
-    <h1>Accomplishments</h1>
+    <h1 align="Center">Toora's Portfolio</h1>
     <hr>
+    <a href="https://baltejnarwal1.github.io/Contact%20Information.html" ">Contact Information</a>
+      <br />
+      <a href="https://baltejnarwal1.github.io/Academic_portfolio.html " ">Academic History</a>
     <br />
-    <ul>
-      <li>Recieving over four scholarships</li>
-      <li>The best student in my class</li>
-      <li>Recieved every sports award possible in high school</li>
-      <li>Have over 30 gold medals from my sports life</li>
-    </ul>
-    <img src="https://d30o31ylp1hvg6.cloudfront.net/uploads/blog/what-should-you-do-when-you-dont-accomplish-your-goals/_thumb/848x450/what-should-you-do-when-you-dont-accomplish-your-goals.png">
+    <a href="https://baltejnarwal1.github.io/Work%20and%20Volunteer%20Experience.html">Work and Volunteer Experience</a>
+    <br />
+    <a href="https://baltejnarwal1.github.io/Accomplishments.html">Accomplishments</a>
   </body>
-  </html>
+
+</html>
