--- a/Contact Information.html
+++ b/Contact Information.html
@@ -25,5 +25,6 @@
       <li>13056 Toora St</li>
       <li>Phone Number: 1-866-247-4999</li>
       </ul>
+      <img src="http://2.bp.blogspot.com/-UqtEL7gO5UM/U61LIMDbvCI/AAAAAAAAAkE/vqpBPrhWVLM/s1600/contactme.png">
   </body>
 </html>
