--- a/Work and Volunteer Experience.html
+++ b/Work and Volunteer Experience.html
@@ -12,6 +12,10 @@
     li {
       font-size:30px;
     }
+    img {
+    width: 600px;
+    height: 400px;
+    }
     </style>
   </head>
   <body>
@@ -22,5 +26,6 @@
     <li>Currently a intern for software engineering</li>
     <li>Also work as a part time entrepreneur</li>
     </ul>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAxcQjSpKDOcRZe_ITB525FhPgl2_MPsMENe6nTE_dv_3bwTG3" width:100px;Length:100px;>
   </body>
 </html>
