--- a/Accomplishments.html
+++ b/Accomplishments.html
@@ -1,1 +1,37 @@
 <!DOCTYPE html>
+<html>
+
+  <head>
+    <title>Accomplishments</title>
+    <style>
+      body {
+        background-color: grey;
+      }
+
+      h1 {
+        color: white;
+        font-size: 50px;
+      }
+
+      li {
+        color: white;
+        font-size: 35px;
+      }
+
+    </style>
+  </head>
+
+  <body>
+    <h1>Accomplishments</h1>
+    <hr>
+    <br />
+    <ul>
+      <li>Have four scholarships</li>
+      <li>Have all sports awards in high school</li>
+      <li>Have 30 gold medals in basketball and soccer</li>
+      <li>Going to Harvard</li>
+    </ul>
+    <img src="https://media.treehugger.com/assets/images/2012/10/shutterstock_104621369.jpg.860x0_q70_crop-smart.jpg">
+  </body>
+
+</html>
