--- a/Academic_portfolio.html
+++ b/Academic_portfolio.html
@@ -7,25 +7,33 @@
         background-color: grey;
         color: white;
       }
+
       h1 {
         Color: white;
         font-size: 55px;
       }
+
       li {
-        font-size:30px;
+        font-size: 30px;
       }
+
       <title>Academic History </title>
+
     </style>
   </head>
+
   <body>
     <h1>Academic History</h1>
     <hr>
     <br />
     <ul>
-     <li>Completed Elementary School</li>
-     <li>Currently in Grade 11</li>
+      <li>Completed Elementary School</li>
+      <li>Currently in Grade 11</li>
       <li>Currently in Torra Man's Secondary</li>
-     <li>Expected to go to Harvard University in the fall of 2019</li>
-     </ul>
-  </body>
+      <li>Expected to go to Harvard University in the fall of 2019</li>
+    </ul> 
+    <img src="https://www.recruitguelph.ca/cecs/sites/uoguelph.ca.cecs/files/public/images/books-academics.jpg">
+    
+   
+   </body>
 </html>
