--- a/Academic_portfolio.html
+++ b/Academic_portfolio.html
@@ -16,8 +16,12 @@
       li {
         font-size: 30px;
       }
+      img {
+    width: 500px;
+    height: 350px;
+      }
 
-      <title>Academic History </title>
+      <title>Academic History</title>
 
     </style>
   </head>
