--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -29,6 +29,8 @@
 
       p {
         font-size: 40px;
+        color:blue;
+        }
 
     </style>
     <title>Toora's Electronic Portfolio!</title>
