--- a/computer_history.html
+++ b/computer_history.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <tittle>Computer history</tittle>
+    <title>Computer history</title>
     <style>
     body{
-      background-color:black;
+      background-color:white;
     }
     h1{
-      color:white;
+      color:dodgerblue;
       font-size:55px;
      
     }
@@ -19,8 +19,6 @@
     <body>
     <h1 align="Center">Computer History</h1>
     <hr>
-    <ul>
-    
-    </ul>
+    <a href=
     </body>
 </html>
