--- a/the_70s.html
+++ b/the_70s.html
@@ -4,10 +4,31 @@
     <title>The 70s</title>
     <style>
     body {
-      background-color: yellow;
+      background-color:white ;
     }
+     li {
+      color:dodgerblue;
+      font-size:30px;
+    }
+     h1 {
+       font-size:55px;
+       color:dodgerblue;
+     }
     </style>
   </head>
+  <body>
+   <h1 align="Center">The 70s</h1>
+   <hr>
+   <br>
+    <ul>
+    <li></li>
+    
+    
+    </ul>
+  
+  
+  </body>
   
 </html>
+
 
