--- a/computer_history.html
+++ b/computer_history.html
@@ -14,11 +14,18 @@
     h2 {
       color:white;
     }
+    li {
+      font-size:30px;
+    }
     </style>
   </head>
     <body>
     <h1 align="Center">Computer History</h1>
     <hr>
-    <a href=
+    <ul>
+    
+   
+   <li><a href="https://baltejnarwal1.github.io/the_70s.html">The 70s</a></li>
+    </ul>
     </body>
 </html>
