--- a/computer_history.html
+++ b/computer_history.html
@@ -25,7 +25,9 @@
     <ul>
     
    
-   <li><a href="https://baltejnarwal1.github.io/the_70s.html">The 70s</a></li>
+   <li><a href="https://baltejnarwal1.github.io/the_70s.html">The 1970s</a></li>
+   <li><a href="https://dhatt123.github.io/the_2010s.html">The 2010s</a></li>
+   <li><a href="https://sukhpaneer.github.io/computer_history2000s.html">The 2000s</a></li>
     </ul>
     </body>
 </html>
