--- a/computer_history.html
+++ b/computer_history.html
@@ -23,11 +23,11 @@
     <h1 align="Center">Computer History</h1>
     <hr>
     <ul>
-    
-   
    <li><a href="https://baltejnarwal1.github.io/the_70s.html">The 1970s</a></li>
-   <li><a href="https://dhatt123.github.io/the_2010s.html">The 2010s</a></li>
-   <li><a href="https://sukhpaneer.github.io/computer_history2000s.html">The 2000s</a></li>
+   <li><a href="https://baltejnarwal1.github.io/the_1980s.html">The 1980s</a></li>
+   
+   <li><a href="https://baltejnarwal1.github.io/the_2000s.html">The 2000s</a></li>
+   <li><a href="">The 2010s</a></li>
     </ul>
     </body>
 </html>
