--- a/The_2010s.html
+++ b/The_2010s.html
@@ -35,7 +35,15 @@
   <p>Apple Pay is a mobile payment and digital wallet service by Apple Inc. that lets users make payments using an iPhone, Apple Watch, iPad or Mac. Apple Pay does not require Apple Pay-specific contactless payment terminals, and can work with existing contactless terminals. It takes your credit cards, debit cards, and other sensitive payment data from the wallet app, which allows you to use your iphone, apple watch, or iPad as a form of payment in stores. It is available in the U.S.A., U.K., Canada, Australia, Brazil, UAE, Russia, China, New Zealand, Singapore, Japan, Taiwan, and Hong Kong, as well as various other European Nations. Apple Pay supports most major credit cards, including American Express, Visa , and MasterCard. Supporting banks vary. It works at any stores that use contactless payments (just look for the contactless payment symbol near readers at checkout).</p>
   
   </ul>
+
+<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
+
   </body>
   
-
 </html>
