--- a/the_70s.html
+++ b/the_70s.html
@@ -45,11 +45,9 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Apple_I_Computer.jpg/1200px-Apple_I_Computer.jpg"width=400 height=300>
    
    </ul>
-   <button onclick="goBack()">Go Back</button>
-   
-<script>
-function goBack() {
-    window.history.back();
+
   
   
   </body>
+  
+</html>
