--- a/Samosa_pizza.html
+++ b/Samosa_pizza.html
@@ -10,13 +10,19 @@
 
       h1 {
         font-style: italic;
-        color: #ff1a8c;
+        color: #ff1a8c, #531aff,#00ffff;
         font-size: 60px;
       }
 
       h2 {
-        font-style: italic font-size:35px;
-        color: red;
+        font-style: italic 
+        color:;
+        font-size:60px;
+      }
+      h3 {
+        font-style: italic 
+        color:;
+        font-size:60px;
       }
 
     </style>
@@ -27,10 +33,12 @@
     <!-- couple sentences explaning the pizza then picutres -->
     <!-- everything -->
     <!-- for evry letter it should change from pink, purple, blue -->.
-    <h1 align="center">Samosa Pizza</h1>
+    <h1 h2 h3 align="center">Samosa Pizza</h1>
     <hr>
-    <h2>Come try the best Indian style Pizza in your life</h2>
-
+    <h1><font color="#ff1a8c">S o P</font></h1>
+    <h1><font color="#ff1a8c, #531aff,#00ffff">S o P</font></h1>
+    
+    
 
 
 
