--- a/Samosa_pizza.html
+++ b/Samosa_pizza.html
@@ -10,19 +10,20 @@
 
       h1 {
         font-style: italic;
-        color: #ff1a8c, #531aff,#00ffff;
+        color: #ff1a8c;
         font-size: 60px;
       }
 
       h2 {
-        font-style: italic 
-        color:;
-        font-size:60px;
+        font-style: italic;
+        font-size: 60px;
+        color:#531aff;
       }
+
       h3 {
-        font-style: italic 
-        color:;
-        font-size:60px;
+        font-style: italic;
+        font-size: 60px;
+        color:#00ffff;
       }
 
     </style>
@@ -33,14 +34,10 @@
     <!-- couple sentences explaning the pizza then picutres -->
     <!-- everything -->
     <!-- for evry letter it should change from pink, purple, blue -->.
-    <h1 h2 h3 align="center">Samosa Pizza</h1>
+    <h1 align="center">Samosa Pizza</h1>
+    <h2 align="center">Samosa Pizza</h2>
+    <h3 align="center">Samosa Pizza</h3>
     <hr>
-    <h1><font color="#ff1a8c">S o P</font></h1>
-    <h1><font color="#ff1a8c, #531aff,#00ffff">S o P</font></h1>
-    
-    
-
-
 
   </body>
 
