--- a/Samosa_pizza.html
+++ b/Samosa_pizza.html
@@ -17,19 +17,21 @@
       h2 {
         font-style: italic;
         font-size: 60px;
-        color:#531aff;
+        color: #531aff;
       }
 
       h3 {
         font-style: italic;
         font-size: 60px;
-        color:#00ffff;
-      }
+        color: #00ffff;
 
     </style>
   </head>
 
   <body>
+    <h1 id="#ff1a8c">soPz</h1>
+    <h2 id="#531aff">asia</h2>
+    <h3 id="#00ffff">maz</h3>
     <!-- #ff1a8c, #531aff,#00ffff -->
     <!-- couple sentences explaning the pizza then picutres -->
     <!-- everything -->
@@ -37,6 +39,7 @@
     <h1 align="center">Samosa Pizza</h1>
     <h2 align="center">Samosa Pizza</h2>
     <h3 align="center">Samosa Pizza</h3>
+   
     <hr>
 
   </body>
