--- a/Samosa_pizza.html
+++ b/Samosa_pizza.html
@@ -12,6 +12,7 @@
         font-style: italic;
         color: #ff1a8c;
         font-size: 60px;
+       
       }
 
       h2 {
@@ -29,20 +30,28 @@
   </head>
 
   <body>
-    <h1 id="#ff1a8c">soPz</h1>
-    <h2 id="#531aff">asia</h2>
-    <h3 id="#00ffff">maz</h3>
+    <h1>
+      <span style='color: #ff1a8c'>S</span>
+      <span style='color: #531aff'>a</span>
+      <span style='color:  #00ffff'>m</span>
+      <span style='color: #ff1a8c'>o</span>
+      <span style='color: #531aff'>s</span>
+      <span style='color: #00ffff'>a</span>
+      
+      <span style='color: #ff1a8c'>P</span>
+      <span style='color: #531aff'>i</span>
+      <span style='color:  #00ffff'>z</span>
+      <span style='color: #ff1a8c'>z</span>
+      <span style='color: #531aff'>a</span>
+
+
+    </h1>
+
     <!-- #ff1a8c, #531aff,#00ffff -->
     <!-- couple sentences explaning the pizza then picutres -->
     <!-- everything -->
-    <!-- for evry letter it should change from pink, purple, blue -->.
-    <h1 align="center">Samosa Pizza</h1>
-    <h2 align="center">Samosa Pizza</h2>
-    <h3 align="center">Samosa Pizza</h3>
-   
+    <!-- for evry letter it should change from pink, purple, blue -->
     <hr>
-
   </body>
-
 
 </html>
