--- a/Samosa_pizza.html
+++ b/Samosa_pizza.html
@@ -4,31 +4,29 @@
   <head>
     <title>Samosa Pizza</title>
     <style>
+    li {
+          color:white;
+        }
       body {
-        background-color: white;
+        background-color: black;
       }
-
       h1 {
         font-style: italic;
         color: #ff1a8c;
         font-size: 60px;
        
       }
-
       h2 {
         font-style: italic;
         font-size: 60px;
         color: #531aff;
       }
-
       h3 {
         font-style: italic;
         font-size: 60px;
         color: #00ffff;
-
     </style>
   </head>
-
   <body>
     <h1>
       <span style='color: #ff1a8c'>S</span>
@@ -43,15 +41,16 @@
       <span style='color:  #00ffff'>z</span>
       <span style='color: #ff1a8c'>z</span>
       <span style='color: #531aff'>a</span>
-
-
     </h1>
-
     <!-- #ff1a8c, #531aff,#00ffff -->
     <!-- couple sentences explaning the pizza then picutres -->
     <!-- everything -->
     <!-- for evry letter it should change from pink, purple, blue -->
     <hr>
+    <br>
+    <ul>
+    <li>The samosa pizza is a amazing combination between a samosa and a pizza, hence the name <em>samosa pizza</em>.The samosa pizza is a one of a kind idea and we belive our chefs made the best version of a samosa Pizza.</li>
+    <li></li>
+    </ul>
   </body>
-
 </html>
